# tugas-akhir

./: .gitignore  ARCHITECTURE.md  Makefile  OPTIMIZATION_ROADMAP.md  README.md  TRAINING_COMMANDS.md  debug_reward.py  demo.py  demo_optimized.py  evaluate.py  evaluate_comparison.py  pyproject.toml  requirements.txt  test_action_mask_debug.py  test_comprehensive.py  test_env_init.py  test_fix_verification.py  test_mini_training.py  train.py  visualization.py
agents/: __init__.py  mcts.py  oracle_policy.py  ppo.py
common/: __init__.py
dataset/: __init__.py  cutting_stock.py  perfect_pack.pt  random_generator.py
docs/: notes.txt
env/: __init__.py  action_mask.py  candidate_generator.py  container_env.py  height_map.py  lbcp.py
models/: __init__.py  actor_critic.py  high_level_agent.py
planning/: __init__.py  mcts.py  oracle_policy.py  repack.py
rl/: __init__.py  high_level_agent.py  low_level_agent.py  ppo.py
scratch/: check_tb.py  debug_worker.py  eval_diagnostics.txt  generate_perfect_pack_pt.py  inspect_rs.py  plot_tb.py  test_evaluation_steps.py  test_ground_truth.py  test_heuristic.py  test_pack.py  test_rs_heuristics.py  test_unshuffled_dblf.py
scripts/: clean.sh  evaluate.py  evaluate_comparison.py  generate_plots_from_tb.py  smoke_test_eval.py  train.py  visualization.py  visualize_perfect_pack.py
src/: __init__.py
tests/: conftest.py  test_action_mask.py  test_algorithms.py  test_container_env.py  test_holding_buffer.py  test_lbcp.py  test_mcts.py  test_mcts_rearrangement.py  test_metrics.py  test_random_generator.py  test_repack.py
(+416 files in other folders)
