[project]
name = "ta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "ipython>=9.13.0",
    "jiwer>=4.0.0",
    "lingua-language-detector>=2.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "phonemizer>=3.3.0",
    "pyyaml>=6.0.3",
    "singleton-decorator>=1.0.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.57.6",
    "whisperx>=3.8.5",
    "yt-dlp>=2026.3.17",
]
